--- a/galerie.html
+++ b/galerie.html
@@ -7,14 +7,19 @@
   <body>
     <nav id="menu">
         <ul>
-            <li><a href="#">Accueil</a></li>
-            <li><a href="#">Présentation</a></li>
-            <li><a href="#">Galerie</a></li>
-            <li><a href="#">Contact</a></li>
+          <li><a href="home.html">Accueil</a></li>
+          <li><a href="presentation.html">Présentation</a></li>
+          <li><a href="#">Galerie</a></li>
+          <li><a href="contact.php">Contact</a></li>
         </ul>
     </nav>
     <main>
-        
+        <section class="galerieblock" id="interieur">
+            <p>Ici il y aura des photos</p>
+        </section>
+        <section class="galerieblock" id="exterieur">
+            <p>Ici aussi, avec probablement un outil de galerie déjà fait</p>
+        </section>
     </main>
     <footer>&copy; Copyright 2018</footer>
   </body>
