--- a/home.html
+++ b/home.html
@@ -8,16 +8,16 @@
     <nav id="menu">
         <ul>
             <li><a href="#">Accueil</a></li>
-            <li><a href="#">Présentation</a></li>
-            <li><a href="#">Galerie</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="presentation.html">Présentation</a></li>
+            <li><a href="galerie.html">Galerie</a></li>
+            <li><a href="contact.php">Contact</a></li>
         </ul>
     </nav>
     <main>
         <section id="slider">
 
         </section>
-        <section id="map">
+        <section class="bloctxt" id="infogenerales">
 
         </section>
     </main>
