--- a/presentation.html
+++ b/presentation.html
@@ -7,14 +7,17 @@
   <body>
     <nav id="menu">
         <ul>
-            <li><a href="#">Accueil</a></li>
-            <li><a href="#">Présentation</a></li>
-            <li><a href="#">Galerie</a></li>
-            <li><a href="#">Contact</a></li>
+          <li><a href="home.html">Accueil</a></li>
+          <li><a href="#">Présentation</a></li>
+          <li><a href="galerie.html">Galerie</a></li>
+          <li><a href="contact.php">Contact</a></li>
         </ul>
     </nav>
     <main>
-        
+        <section class="bloctxt">
+            <h1>Lorem Ipsum</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum maximus vehicula mollis. Suspendisse potenti. Aliquam eget neque vitae nulla egestas aliquet non fermentum tortor. Aenean rhoncus blandit lacus id porttitor. Nam enim mauris, placerat at nulla at, consequat facilisis lectus. Maecenas pharetra, risus vitae imperdiet posuere, erat tortor ultrices turpis, vel tincidunt enim ex a lacus. Nullam dictum a orci at iaculis. Nulla ac elit interdum, blandit massa nec, pretium tortor. Nam malesuada nulla eu tellus imperdiet, vitae semper neque mattis. Sed placerat pulvinar mattis. Sed et ornare erat.</p>
+        </section>
     </main>
     <footer>&copy; Copyright 2018</footer>
   </body>
