--- a/galerie.html
+++ b/galerie.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="fr">
   <head>
-    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8">
     <title>Galerie</title>
+    <link rel="stylesheet" href="stylesheet.css" type="text/css">
   </head>
   <body>
     <nav id="menu">
         <ul>
           <li><a href="home.html">Accueil</a></li>
           <li><a href="presentation.html">Présentation</a></li>
-          <li><a href="#">Galerie</a></li>
+          <li><a class="active" href="#">Galerie</a></li>
           <li><a href="contact.php">Contact</a></li>
+          <li class="rightm"><a href="legal.html">Mentions légales</a></li>
         </ul>
     </nav>
     <main>
