--- a/home.html
+++ b/home.html
@@ -1,26 +1,41 @@
 <!DOCTYPE html>
 <html lang="fr">
   <head>
-    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8">
     <title>Accueil</title>
+    <link rel="stylesheet" href="stylesheet.css" type="text/css">
+    <link rel="stylesheet" href="slick/slick.css" type="text/css">
+    <link rel="stylesheet" href="slick/slick-theme.css" type="text/css">
   </head>
   <body>
     <nav id="menu">
         <ul>
-            <li><a href="#">Accueil</a></li>
+            <li><a class="active" href="#">Accueil</a></li>
             <li><a href="presentation.html">Présentation</a></li>
             <li><a href="galerie.html">Galerie</a></li>
             <li><a href="contact.php">Contact</a></li>
+            <li class="rightm"><a href="legal.html">Mentions légales</a></li>
         </ul>
     </nav>
     <main>
-        <section id="slider">
-
-        </section>
-        <section class="bloctxt" id="infogenerales">
-
-        </section>
+        <div class="single-item">
+          <div><img class="imgsld" src="img/bcg2.jpg" alt="2nd img"></div>
+          <div><img class="imgsld" src="img/ok.jpg" alt="3rd image"></div>
+        </div>
     </main>
     <footer>&copy; Copyright 2018</footer>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script type="text/javascript" src="slick/slick.min.js"></script>
+
+    <script>
+      $(document).ready(function(){
+        $('.single-item').slick({
+          autoplay: true,
+          adaptativeHeight: true,
+          appendArrows: $(".single-item"),
+          fade: true
+        });
+      });
+    </script>
   </body>
 </html>
